samples/_failures_safe/1761275863_852b5e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c8061887.c: In function ‘calculate_stats’:
./samples/SAFE/__tmp_c8061887.c:150:9: error: expected expression at end of input
  150 |         stats->compression_ratio = (double)ctx->output_size /
      |         ^~~~~
./samples/SAFE/__tmp_c8061887.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c8061887.c:150:9: error: expected declaration or statement at end of input
